# praxis

./: Cargo.toml  deny.toml
.claude/: CLAUDE.md
.github/workflows/: benchmarks.yaml  codeql.yaml  conformance.yaml  container.yaml  coverage.yaml  documentation.yaml  integration.yaml  microbenchmarks.yaml  msrv.yaml  nightly.yaml  publish.yaml  release.yaml  supply-chain.yaml  tests.yaml
core/src/: memory.rs
docs/filters/: reference.md
docs/filters/http/security/: cpex.md  policy.md
examples/: README.md
examples/configs/security/: authpolicy-http.yaml  cpex.yaml  policy.yaml
filter/: Cargo.toml
filter/src/: lib.rs  registry.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs
filter/src/builtins/http/ai/agentic/a2a/: tests.rs
filter/src/builtins/http/ai/openai/responses/: config.rs  mod.rs
filter/src/builtins/http/security/: mod.rs  origin_normalize.rs
filter/src/builtins/http/security/cpex/: README.md  config.rs  error.rs  factories.rs  filter.rs  json_rpc.rs  mod.rs  tests.rs  timing.rs
filter/src/builtins/http/security/policy/: config.rs  error.rs  filter.rs  mod.rs  tests.rs
protocol/src/http/pingora/handler/: no_body.rs  with_body.rs
protocol/src/http/pingora/handler/request_filter/: validation.rs
server/: Cargo.toml
tests/integration/: Cargo.toml
tests/integration/fixtures/: authpolicy-http-cpex-policy.yaml  cpex-policy.yaml
tests/integration/tests/suite/examples/: authpolicy_http.rs  cpex.rs  mod.rs  policy.rs
tests/utils/src/net/: tls.rs
xtask/: Cargo.toml
xtask/src/: main.rs  transpile_authpolicy.rs
xtask/src/authpolicy/: cel.rs  emit.rs  mod.rs  model.rs  report.rs  translate.rs
xtask/tests/fixtures/authpolicy/: apikey-opa.golden  apikey-opa.yaml  gateway-defaults.golden  gateway-defaults.yaml  jwt-rbac.golden  jwt-rbac.yaml
